--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.1",
     "morgan": "^1.10.0",
-    "xss": "^1.0.14"
+    "xss": "^1.0.14",
+    "xss-clean": "^0.1.4"
   }
 }
